# webchess

./: auto_test.py  chess.py  main.py  movehistory.py  pyproject.toml  stack.py  web.py
static/: style.css
templates/: game.html  homepage.html  winner.html
