[tool.poetry]
name = "repl_python3_webchess-1"
version = "0.1.0"
description = ""
authors = ["fookwahkong <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
